--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
-envlist=py27,py34,py35
+envlist=py34,py35,py36
 
 [testenv]
-commands=py.test foobot_async
+commands=py.test
 deps=pytest
+     aioresponses
