--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,8 @@
 envlist=py34,py35,py36
 
 [testenv]
-commands=py.test
+commands=py.test --cov=foobot_async
 deps=pytest
+     pytest-cov
+     coverage
      aioresponses
