--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: python
 python:
+    - "3.4"
+    - "3.5"
     - "3.6"
-install: pip install tox-travis
+install: pip install tox-travis python-coveralls
 script: tox
+after_success: coveralls
