--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,5 @@ commands=py.test --cov=foobot_async
 deps=pytest
      pytest-cov
      coverage
-#     aioresponses
-     git+https://github.com/davidwtbuxton/aioresponses.git@173-aiohttp-compat
+     aioresponses==0.7.1
      asynctest
