chore: updated python version used during tests

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist=py35,py36,py37,py38,py39
+envlist=py35,py36,py37,py38,py39,py310,py311
 
 [testenv]
 commands=py.test --cov=foobot_async
@@ -8,3 +8,4 @@ deps=pytest
      coverage
      aioresponses==0.7.1
      asynctest
+     asyncio>=3.1.0
